# oci-secret-helper

./: .gitignore  CHANGELOG.md  README.md  load_dynamic_ini.py  pyproject.toml
.github/workflows/: python-publish.yml
oci_secret_helper/: __init__.py  __main__.py  dynamic_ini.py
tests/: test_dynamic_ini.py
